sm6150-common: overlay: Enable & Fix Smart Charging
- add device specific init script
- add sysfs nodes
- set permissions
- address denial

Signed-off-by: shield44 <motoecondorxt1022@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -328,4 +328,9 @@
     <integer name="config_wakeUpDelayDoze">32</integer>
     <!--The name of the package that will hold the dialer role by default. -->
     <string name="config_defaultDialer" translatable="false">com.android.dialer</string>
+    
+     <!-- Smart charging -->
+    <string name="config_SmartChargingSysfsNode" translatable="false">/sys/class/power_supply/battery/input_suspend</string>
+    <string name="config_SmartChargingSuspendValue" translatable="false">1</string>
+    <string name="config_SmartChargingResumeValue" translatable="false">0</string>
 </resources>
